[tool.poetry]
name = "keylight"
version = "0.1.0"
description = ""
authors = ["Geoffry Song <goffrie@dropbox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
leglight = "^0.2.0"
PyGObject = "^3.40.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
